examples/neg/typer/issue1215.effekt
def push123(): Unit / emit[Int] = [1, 2, 3].each
def printAll(): Bool / read[Int] = {
  loop { println(do read()) }
  true
}

def main() = {
  val a = returning::source {push123} {printAll}
}